--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
     <div class="resume-container">
 
       <div class="resume-row">
+        <a href="https://www.youtube.com" target="_blank">
+          <div class="resume-item">
+            <div class="resume-item-icon">
+              <img src="img/icons/youtube.png">
+            </div>
+            <div class="resume-item-title">
+              Product &#64; YouTube
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="resume-row">
         <a href="https://www.waymo.com" target="_blank">
           <div class="resume-item">
             <div class="resume-item-icon">
