--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <![endif]-->
 
   <div class="main-container">
+
+    <div class="transition"></div>
+
     <div class="hero-title">
       <!--
       Jian
@@ -35,6 +38,19 @@
     </div>
 
     <div class="resume-container">
+
+      <div class="resume-row">
+        <a href="https://www.nvidia.com" target="_blank">
+          <div class="resume-item">
+            <div class="resume-item-icon">
+              <img src="img/icons/nvidia.png">
+            </div>
+            <div class="resume-item-title">
+              Product &#64; Nvidia
+            </div>
+          </div>
+        </a>
+      </div>
 
       <div class="resume-row">
         <a href="https://www.youtube.com" target="_blank">
